--- a/public/catalogue.css
+++ b/public/catalogue.css
@@ -1,24 +1,34 @@
 a {
     text-decoration: none;
     color: black;
-    margin: 20px 10px 20px 0px;
-    border-style: solid;
-    border-color: black;
-    border-width: 1px;
-    padding: 10px;
 }
 
 li {
     margin: 20px 10px 20px 0px;
 }
 
-li a {
-    border-style: solid;
-    border-color: black;
-    border-width: 1px;
-    padding: 10px;
-}
-
 h1 {
     text-align: center;
+}
+
+img {
+    height: 200px;
+}
+
+ol {
+    list-style: none;
+
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+header {
+    width: 20%;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    flex-wrap: wrap;
 }
