--- a/views/admin/updateAnime.pug
+++ b/views/admin/updateAnime.pug
@@ -11,7 +11,9 @@ html(lang="en")
         a(href="/admin/users") Users 
         h1 General Info 
 
-        form#update(action="/admin/update/" + animeID, method="post")
+        form#update(action="/admin/update/" + animeID, method="post", enctype="multipart/form-data")
+            input#image(type="file", name="image")
+
             label(for="name") Name 
             input#name(type="text", name="name", value= anime.name) 
 
