--- a/public/catalogue.css
+++ b/public/catalogue.css
@@ -3,16 +3,12 @@ a {
     color: black;
 }
 
-li {
-    margin: 20px 10px 20px 0px;
-}
-
 h1 {
     text-align: center;
 }
 
 img {
-    height: 200px;
+    height: 300px;
 }
 
 ol {
@@ -23,12 +19,32 @@ ol {
     flex-wrap: wrap;
 }
 
+li {
+    margin: 20px;
+    padding: 10px;
+    border-radius: 10px;
+    background-color: #7c7c7c;
+}
+
 header {
-    width: 20%;
+    width: 100%;
+    background-color: #7c7c7c;
 
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
+}
+
+header p, header a {
+    margin: 20px;
+}
+
+header p {
+    font-size: 20px;
+    font-style: oblique;
+}
+
+main {
+    padding: 0% 10% 0% 10%;
 }
