--- a/views/admin/users.pug
+++ b/views/admin/users.pug
@@ -5,19 +5,24 @@ html(lang="en")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title Users
+        link(rel="stylesheet", href="/users.css")
     body 
-        a(href="/admin") Admin 
-        a(href="/admin/users") Users 
-
-        h1 List of All Users 
-        ol 
-            each val, index in users
-                li
-                    ul 
-                        li= "First Name: " + val.firstName 
-                        li= "Last Name: " + val.lastName 
-                        li= "Email: " + val.email 
-                    a(href="/admin/users/update/" + index) Update 
-                    form(action="/admin/users/delete/" + index, method="post") 
-                        input(type="submit", value="Delete")
+        header 
+            a(href="/admin") Admin 
+            a(href="/admin/users") Users 
+        main 
+            h1 List of All Users 
+            ol 
+                each val, index in users
+                    li
+                        ul 
+                            li 
+                                p= "First Name: " + val.firstName 
+                            li  
+                                p= "Last Name: " + val.lastName 
+                            li 
+                                p= "Email: " + val.email 
+                        a(href="/admin/users/update/" + index) Update 
+                        form(action="/admin/users/delete/" + index, method="post") 
+                            input(type="submit", value="Delete")
 
