--- a/public/anime.css
+++ b/public/anime.css
@@ -9,23 +9,27 @@ ul {
 }
 
 li {
-    background-color: #7c7c7c; 
+    background-color: #f47521; 
     margin: 10px;
     width: 100px;
     height: 60px;
     border-radius: 10px;
+    transition: .5s;
 
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
+li:hover {
+    transform: scale(1.1, 1.1);
+}
+
 li > a {
     color: black;
     text-decoration: none;
-    width: 70%;
+    width: 80%;
     height: 60%;
-
     text-align: center;
 }
 
@@ -41,14 +45,30 @@ img {
     flex-direction: row;
 }
 
+@media (max-width: 900px) {
+    #meta {
+        flex-wrap: wrap;
+    }
+}
+
 #meta > div {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
 
-h1, h3 p {
+#meta > div h1 {
+    font-size: 40px;
+}
+
+#meta > div p {
+    font-size: 18px;
+}
+
+h1, h3, p {
     margin: 0px;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 #buttons {
@@ -65,21 +85,34 @@ main {
 
 header {
     width: 100%;
-    height: 7vh;
-    background-color: #7c7c7c;
+    background-color: #23252b;
 
     display: flex;
     flex-direction: row;
     align-items: center;
 }
 
-header > a, header p {
-    color: black;
-    text-decoration: none;
+header p, header a {
     margin: 20px;
+    font-size: 25px;
+    text-decoration: none;
+    color: white;
 }
 
 header p {
     font-style: oblique;
-    font-size: 20px;
+    color: #f47521;
+}
+
+body {
+    background-color: black;
+    margin: 0px;
+}
+
+h1:hover, h3:hover, p:hover, a:hover {
+    color: #f47521;
+}
+
+li > a:hover {
+    color: black;
 }
