--- a/public/catalogue.css
+++ b/public/catalogue.css
@@ -1,14 +1,16 @@
 a {
     text-decoration: none;
-    color: black;
+    color: white;
 }
 
 h1 {
     text-align: center;
+    color: #f47521;
+    font-size: 40px;
 }
 
 img {
-    height: 300px;
+    height: 350px;
 }
 
 ol {
@@ -21,14 +23,23 @@ ol {
 
 li {
     margin: 20px;
-    padding: 10px;
+    /* padding: 10px; */
     border-radius: 10px;
-    background-color: #7c7c7c;
+    /* background-color: white; */
+    transition: .5s;
+}
+
+li:hover {
+    transform: scale(1.05, 1.05);
+}
+
+li p {
+    font-size: 20px;
 }
 
 header {
     width: 100%;
-    background-color: #7c7c7c;
+    background-color: #23252b;
 
     display: flex;
     flex-direction: row;
@@ -38,13 +49,29 @@ header {
 
 header p, header a {
     margin: 20px;
+    font-size: 25px;
 }
 
 header p {
-    font-size: 20px;
     font-style: oblique;
+    color: #f47521;
 }
 
 main {
     padding: 0% 10% 0% 10%;
+}
+
+body {
+    /* background-image: url('https://wallpapers.com/images/hd/cat-art-minimalist-cat-with-scarf-9xsp01c2qd97kzoz.jpg'); */
+    background-color: black;
+    padding: 0px;
+    margin: 0px;
+}
+
+h1, h3, p {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+h1:hover, h3:hover, p:hover, a:hover {
+    color: #f47521;
 }
