--- a/public/profile.css
+++ b/public/profile.css
@@ -1,6 +1,6 @@
 header {
     width: 100%;
-    background-color: #7c7c7c;
+    background-color: #23252b;
 
     display: flex;
     flex-direction: row;
@@ -9,13 +9,14 @@ header {
 }
 
 header a, header p {
-    color: black;
+    color: white;
     text-decoration: none;
     margin: 20px;
+    font-size: 25px;
 }
 
 header p {
-    font-size: 20px;
+    color: #f47521;
     font-style: oblique;
 }
 
@@ -48,13 +49,22 @@ main {
     grid-column-gap: 40px;
 }
 
+@media (max-width: 800px) {
+    main {
+        display: flex;
+        flex-direction: column;
+        gap: 40px;
+    }
+}
+
 main > h1 {
     grid-column: 1/3;
     text-align: center;
+    color: white;
 }
 
 main > div {
-    background-color: #7c7c7c;
+    background-color: #f47521;
     border-radius: 10px;
 
     display: flex;
@@ -64,4 +74,21 @@ main > div {
 
 main > div > h3 {
     font-size: 30px;
+}
+
+body {
+    background-color: black;
+    margin: 0%;
+}
+
+h1, h3, p {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+h1:hover, h3:hover, p:hover, a:hover {
+    color: #f47521;
+}
+
+h3:hover, li > a:hover {
+    color: black;
 }
