--- a/public/sign-in.css
+++ b/public/sign-in.css
@@ -1,8 +1,22 @@
-form {
+div {
+    background-color: #7c7c7c;
+    padding: 10px;
     width: 30%;
-    height: 40vh;
+    border-radius: 10px;
+}
 
+form {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    gap: 20px;
+}
+
+body {
+    width: 100%;
+    height: 100vh;
+    margin: 0px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
