--- a/public/updateAnime.css
+++ b/public/updateAnime.css
@@ -1,5 +1,5 @@
 #update {
-    width: 30%;
+    width: 100%;
     height: 30vh;
 
     display: flex;
@@ -8,7 +8,7 @@
 }
 
 #delete {
-    width: 30%;
+    width: 100%;
 
     display: flex;
     flex-direction: column;
@@ -16,10 +16,64 @@
 }
 
 #episodes {
-    width: 30%;
+    width: 100%;
     height: 30vh;
 
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+a, h1, label, p {
+    font-family: 'Courier New', Courier, monospace;
+}
+
+header {
+    background-color: #cad0e1;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+header > a {
+    margin: 20px;
+    font-size: 20px;
+}
+
+body {
+    margin: 0px;
+}
+
+main {
+    padding: 0% 10% 0% 10%;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+main > div {
+    width: 45%;
+}
+
+ul {
+    padding: 0%;
+}
+
+#episodes-div > ul {
+    height: 250px;
+
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+
+p {
+    margin: 0px;
 }
