--- a/views/admin/addAnime.pug
+++ b/views/admin/addAnime.pug
@@ -7,13 +7,14 @@ html(lang="en")
         title Add Anime
         link(rel="stylesheet", href="/addAnime.css")
     body 
-        a(href="/admin") Admin 
-        a(href="/admin/users") Users 
-        
-        h1 Enter Info
-        form(action="/admin/add", method="post") 
-            label(for="name") Name  
-            input#name(type="text", name="name")
-            label(for="description") Description 
-            input#description(type="text", name="description")
-            input(type="submit", value="Add")
+        header 
+            a(href="/admin") Admin 
+            a(href="/admin/users") Users 
+        main 
+            h1 Enter Info
+            form(action="/admin/add", method="post") 
+                label(for="name") Name  
+                input#name(type="text", name="name")
+                label(for="description") Description 
+                input#description(type="text", name="description")
+                input(type="submit", value="Add")
