--- a/views/episode.pug
+++ b/views/episode.pug
@@ -5,11 +5,16 @@ html(lang="en")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         title= anime.name
+        link(rel="stylesheet", href="/episode.css")
     body 
-        a(href="/profile") Profile   
-        a(href="/catalogue") Catalogue  
-        a(href="/catalogue/" + anime._id)= anime.name
-        h1= anime.name
-        h3= "Season " + episode.season + " Episode " + episode.number 
-        video(width="50%" controls autoplay)
-            source(src="/video/" + anime._id + "/" + episode._id type="video/mp4") 
+        header 
+            strong 
+                p Anime Patterns 
+            a(href="/profile") Profile   
+            a(href="/catalogue") Catalogue 
+            a(href="/catalogue/" + anime._id)= anime.name
+        main  
+            h1= anime.name
+            h3= "Season " + episode.season + " Episode " + episode.number 
+            video(width="95%" controls autoplay)
+                source(src="/video/" + anime._id + "/" + episode._id type="video/mp4") 
