--- a/public/anime.css
+++ b/public/anime.css
@@ -80,7 +80,13 @@ h1, h3, p {
 }
 
 main {
-    padding: 00% 20% 0% 20%;
+    padding: 0% 20% 0% 20%;
+}
+
+@media (max-width: 600px) {
+    main {
+        padding: 0% 5% 0% 5%;
+    }
 }
 
 header {
