--- a/public/episode.css
+++ b/public/episode.css
@@ -5,6 +5,7 @@ header {
     display: flex;
     flex-direction: row;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 header p, header a {
@@ -21,6 +22,12 @@ header p {
 
 main {
     padding: 0% 20% 0% 20%;
+}
+
+@media (max-width: 1000px) {
+    main {
+        padding: 0% 5% 0% 5%;
+    }
 }
 
 main h3 {
