--- a/public/profile.css
+++ b/public/profile.css
@@ -57,6 +57,12 @@ main {
     }
 }
 
+@media (max-width: 1100px) {
+    main {
+        padding: 0% 5% 0% 5%;
+    }
+}
+
 main > h1 {
     grid-column: 1/3;
     text-align: center;
