--- a/views/profile.pug
+++ b/views/profile.pug
@@ -12,6 +12,7 @@ html(lang="en")
                 p Anime Patterns 
             a(href="/profile") Profile 
             a(href="/catalogue") Catalogue  
+            a(href="/logout") Log Out
         main 
             h1= user.firstName + " " + user.lastName 
             div
