--- a/views/admin/addAnime.pug
+++ b/views/admin/addAnime.pug
@@ -16,5 +16,6 @@ html(lang="en")
                 label(for="name") Name  
                 input#name(type="text", name="name")
                 label(for="description") Description 
-                input#description(type="text", name="description")
+                //input#description(type="text", name="description")
+                textarea#description(name="description", cols="30", rows="10") 
                 input(type="submit", value="Add")
