--- a/views/auth/sign-in.pug
+++ b/views/auth/sign-in.pug
@@ -20,3 +20,5 @@ html(lang="en")
                 input#password(type="password", name="password")  
 
                 input(type="submit", value="Sign In")
+            p Don't have an account? 
+                a(href="/sign-up") Sign Up
