--- a/views/auth/sign-up.pug
+++ b/views/auth/sign-up.pug
@@ -22,3 +22,5 @@ html(lang="en")
             input#password(type="password", name="password")
 
             input(type="submit", value="Sign Up")
+        p Already have an account? 
+            a(href="/sign-in") Sign In
