--- a/public/sign-in.css
+++ b/public/sign-in.css
@@ -1,5 +1,5 @@
 div {
-    background-color: #7c7c7c;
+    background-color: #f47521;
     padding: 10px;
     width: 30%;
     border-radius: 10px;
@@ -21,8 +21,24 @@ body {
     width: 100%;
     height: 100vh;
     margin: 0px;
+    background-color: black;
 
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+a {
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+input {
+    border-style: none;
+    height: 20px;
+}
+
+input:focus-visible {
+    outline: none;
 }
