--- a/public/signUp.css
+++ b/public/signUp.css
@@ -1,8 +1,44 @@
-form {
+div {
+    background-color: #f47521;
+    padding: 10px;
     width: 30%;
-    height: 50vh;
+    border-radius: 10px;
+}
 
+@media (max-width: 1000px) {
+    div {
+        width: 60%;
+    }
+}
+
+form {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    gap: 20px;
+}
+
+body {
+    width: 100%;
+    height: 100vh;
+    margin: 0px;
+    background-color: black;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+a {
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+input {
+    border-style: none;
+    height: 20px;
+}
+
+input:focus-visible {
+    outline: none;
 }
