--- a/views/auth/sign-in.pug
+++ b/views/auth/sign-in.pug
@@ -4,21 +4,21 @@ html(lang="en")
         meta(charset="UTF-8")
         meta(http-equiv="X-UA-Compatible", content="IE=edge")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
-        title Sign In
+        title Войти
         link(rel="stylesheet", href="/sign-in.css")
     body 
         div
-            h1 Sign In 
+            h1 Войти
             form(action="/sign-in", method="post")
-                label(for="first-name") First Name  
+                label(for="first-name") Имя 
                 input#first-name(type="text", name="firstName") 
 
-                label(for="last-name") Last Name  
+                label(for="last-name") Фамилия
                 input#last-name(type="text", name="lastName") 
 
-                label(for="password") Password  
+                label(for="password") Пароль
                 input#password(type="password", name="password")  
 
-                input(type="submit", value="Sign In")
-            p Don't have an account? 
-                a(href="/sign-up") Sign Up
+                input(type="submit", value="Войти")
+            p Нет аккаунта? 
+                a(href="/sign-up") Зарегистрируйтесь
