--- a/views/catalogue.pug
+++ b/views/catalogue.pug
@@ -9,15 +9,15 @@ html(lang="en")
     body 
         header 
             strong 
-                p Anime Patterns
-            a(href="/profile") Profile 
-            a(href="/catalogue") Catalogue 
+                p A Knee Man
+            a(href="/profile") Профиль 
+            a(href="/catalogue") Каталог 
         main 
-            h1 Anime Catalogue 
+            h1 Каталог аниме 
             ol 
                 each val in anime
                     li
                         a(href="/catalogue/" + val._id)  
                             div
-                                img(src="/images/" + val.name + ".jpg") 
+                                img(src=val.imageUrl) 
                                 p= val.name 
